monticore-generator/src/test/resources/cocos/invalid/A4102/A4102g.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A4102;

grammar A4102g extends mc.grammars.types.TestTypes{

  symbol A = "a" Name;

  symbolrule A =
    b:Set<Optional<String>>;

}